--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <button type="button"class="but but-one">Learn more</button>
 </div>
 <div class="col-lg-4 col-md-12 suv">
-  <img src="C:\Users\J.STOCK\Desktop\html\codes\3-column-preview-card-component-main\images\icon-suvs.svg" alt="">
+  <img src="https://raw.githubusercontent.com/hossamattyia92/three_columns/550dfba626767386806ba9330abbe71250de0ce9/icon-suvs.svg" alt="suv">
   <h3>SUVs</h3>
   <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
   and off-road adventures.</P>
