--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 <!-- title -->
   <title>Frontend Mentor | 3-column preview card component</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/hossamattyia92/three_columns/blob/main/favicon-32x32.png?raw=true">
 <!-- Bootstrap 5.0 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <!-- stylesheet -->
@@ -16,7 +16,7 @@
 <body>
 <div class="row">
 <div class="col-lg-4 col-md-12 sedan">
-  <img src="C:\Users\J.STOCK\Desktop\html\codes\3-column-preview-card-component-main\images\icon-sedans.svg" alt="sedan">
+  <img src="https://raw.githubusercontent.com/hossamattyia92/three_columns/3c64aa5a782083022563eff0fb8bafa602cf1000/icon-sedans.svg" alt="sedan">
 <h3>Sedans</h3>
   <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
   or on your next road trip.</p>
@@ -30,7 +30,7 @@
 <button type="button" class="but but-two">Learn more</button>
 </div>
 <div class="col-lg-4 col-md-12 luxury">
-  <img src="C:\Users\J.STOCK\Desktop\html\codes\3-column-preview-card-component-main\images\icon-luxury.svg" alt="">
+  <img src="https://raw.githubusercontent.com/hossamattyia92/three_columns/3c64aa5a782083022563eff0fb8bafa602cf1000/icon-luxury.svg" alt="luxury">
 <h3>Luxury</h3>
   <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
   rental and arrive in style.</p>
